--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             }
 
             .line1 {
-                top: -8vh;
+                top: -8%;
                 left: -1%;
                 width: 300px;
                 height: 300px;
@@ -293,7 +293,7 @@
             }
 
             .line8 {
-                top: 60vh;
+                top: 60%;
                 left: -7%;
                 width: 500px;
                 height: 500px;
